# IC

./: .gitignore  README.md
project1/: readme.md
project1/partI/: CMakeLists.txt  README.md  TextFileReader.cpp  TextFileReader.h  main.cpp  partI.cpp  plot_histogram.py  test.txt  utf_16.txt  utf_8.txt
project1/partII/: AudioTest.cpp  CMakeLists.txt  README.md  audioDecoder.cpp  audioDecoder.h  partII.cpp  run.sh
project1/partIII/: CMakeLists.txt  ImageDecoder.cpp  ImageDecoder.h  README.md  partIII.cpp  plot_histogram.py
project1/partIV/: README.md
project2/: BitStream.cpp  CMakeLists.txt  GolombMain.cpp  README.md  binary_to_string.cpp  bts.sh  clean.sh  decode_1stAttempt.txt  decoder.cpp  encode_1stAttempt.txt  encoder.cpp  encoder1.cpp  encoderMeaning.cpp  encoderMeaning1.cpp  input.txt  run_decoder.sh  run_encoder.sh  stb.sh  string_to_binary.cpp
project2/partI/: CMakeLists.txt  README.md  decoder.cpp  encoder.cpp  encoderRunner.sh
project2/partII/: CMakeLists.txt  GolombCoding.h  GolombMain.cpp  README.md  inputINT.txt
project2/partIII/: BitStream.cpp  BitStream.h  CMakeLists.txt  audioCodecMain.cpp  audioParser.cpp  audioParser.h  losslessDecoder.cpp  losslessDecoder.h  losslessEncoder.cpp  losslessEncoder.h  predictModel.cpp  predictModel.h  readme.md
project2/partIV/: ArithmeticEncoding.cpp  ArithmeticEncoding.h  ArithmeticTest.cpp  BitStream.cpp  BitStream.h  CMakeLists.txt  GolombCoding.cpp  HuffmanCoding.cpp  HuffmanCoding.h  HuffmanTest.cpp  ImageCoding.cpp  ImageDecoder.cpp  ImageDecoder.h  IntraFrameCoding.cpp  IntraLossyCoding.cpp  LosslessImage.cpp  LosslessImage.h  LosslessVideo.cpp  LosslessVideo.h  LossyVideo.cpp  LossyVideo.h  readme.md
project3/: README.md
